# vc-template-cmake

./: .clang  .gitignore  CMakeLists.txt  LICENSE  README.md  makeversion.sh
lib/: CMakeLists.txt
lib/version/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  version.h
src/vct/: CMakeLists.txt  vct.cpp  vct.h
test/: CMakeLists.txt
test/src/: CMakeLists.txt  tests_main.cpp
